[gd_scene load_steps=4 format=2]

[ext_resource path="res://Mini Scenes/Main/Console.gd" type="Script" id=2]
[ext_resource path="res://Mini Scenes/Typer.tscn" type="PackedScene" id=3]
[ext_resource path="res://Art/Typer4.png" type="Texture" id=4]

[node name="ConsoleEnemy" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 497.616
margin_top = 677.868
margin_right = 13.6157
margin_bottom = -2.13251
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlackBackground" type="ColorRect" parent="."]
visible = false
margin_left = 10.0
margin_right = 376.0
margin_bottom = 145.0
rect_scale = Vector2( 0.8, 0.8 )
color = Color( 0.0392157, 0.00392157, 0.00392157, 1 )

[node name="Typer1" parent="." instance=ExtResource( 3 )]
margin_left = 19.1868
margin_top = -137.112
margin_right = 319.187
margin_bottom = -67.1118
rect_scale = Vector2( 0.8, 1 )
sprite = ExtResource( 4 )

[node name="Typer2" parent="." instance=ExtResource( 3 )]
margin_left = 19.1868
margin_top = -99.9478
margin_right = 319.187
margin_bottom = -29.9476
rect_scale = Vector2( 0.8, 1 )
id = 1
sprite = ExtResource( 4 )

[node name="Typer3" parent="." instance=ExtResource( 3 )]
margin_left = 19.2273
margin_top = -62.8716
margin_right = 368.227
margin_bottom = -32.8716
rect_scale = Vector2( 0.8, 1 )
id = 2
sprite = ExtResource( 4 )

[node name="Typer4" parent="." instance=ExtResource( 3 )]
margin_left = 18.7396
margin_top = -25.9186
margin_right = 367.74
margin_bottom = 4.08142
rect_scale = Vector2( 0.8, 1 )
id = 2
sprite = ExtResource( 4 )

[node name="Typer5" parent="." instance=ExtResource( 3 )]
margin_left = 19.2529
margin_top = 11.0422
margin_right = 368.253
margin_bottom = 41.0422
rect_scale = Vector2( 0.8, 1 )
id = 2
sprite = ExtResource( 4 )

[node name="Typer6" parent="." instance=ExtResource( 3 )]
margin_left = 18.7396
margin_top = 48.7412
margin_right = 367.74
margin_bottom = 78.7412
rect_scale = Vector2( 0.8, 1 )
id = 2
sprite = ExtResource( 4 )

[node name="Typer7" parent="." instance=ExtResource( 3 )]
margin_left = 18.8878
margin_top = 85.7163
margin_right = 367.888
margin_bottom = 115.716
rect_scale = Vector2( 0.8, 1 )
id = 2
sprite = ExtResource( 4 )
[connection signal="command_typed" from="Typer1" to="." method="_command_typed"]
[connection signal="typer_updated" from="Typer1" to="." method="_update_outlines"]
[connection signal="command_typed" from="Typer2" to="." method="_command_typed"]
[connection signal="typer_updated" from="Typer2" to="." method="_update_outlines"]
[connection signal="command_typed" from="Typer3" to="." method="_command_typed"]
[connection signal="typer_updated" from="Typer3" to="." method="_update_outlines"]
[connection signal="command_typed" from="Typer4" to="." method="_command_typed"]
[connection signal="typer_updated" from="Typer4" to="." method="_update_outlines"]
[connection signal="command_typed" from="Typer5" to="." method="_command_typed"]
[connection signal="typer_updated" from="Typer5" to="." method="_update_outlines"]
[connection signal="command_typed" from="Typer6" to="." method="_command_typed"]
[connection signal="typer_updated" from="Typer6" to="." method="_update_outlines"]
[connection signal="command_typed" from="Typer7" to="." method="_command_typed"]
[connection signal="typer_updated" from="Typer7" to="." method="_update_outlines"]
